# pqs-rtn-hybrid-storage

./: .editorconfig  .gitattributes  .gitignore  .markdownlintignore  300-template-plan.md  ADMIN_PANEL_TABS_PLAN.md  AUTOFILL_ANALYSIS_REPORT.md  CURSOR_VSCODE_COMPARISON_ANALYSIS.md  DESKTOP_APP_OPTIMIZATION_GUIDE.md  FIXES_SUMMARY.md  FORM_COMPONENTS_IMPACT_ANALYSIS.md  FORM_INPUT_WHITE_BACKGROUND_FIX.md  GIT_WORKFLOW_GUIDE.md  HERO_SECTION_COLOR_ANALYSIS.md  HOW_TO_RUN_PROJECT.md  HOW_TO_TEST_PHASE1_1.md  HOW_TO_TEST_PHASE5F.md  IMPROVED_COLOR_SCHEME.css  LOOPING_ANALYSIS_REPORT.md  PHASE2_NAVIGATION_FEATURES.md  PHASE5G_TRAINEE_ATTACHMENTS_PLAN.md  PHASE5_REFACTORING_PLAN.md  PORT_1420_MANAGEMENT_ANALYSIS.md  PORT_FIX_SUMMARY.md  PREMIUM_TERMINAL_ANALYSIS_REPORT.md  PROJECT_CONTEXT.md  PROJECT_REVIEW_PLAN.md  README.md  SECTION200_EXEMPTED_FIX.md  SIGNIN_PROBLEM_SOLUTION_GUIDE.md  TITLE_COMPONENT_EXAMPLE.tsx  TYPOGRAPHY_COLOR_RECOMMENDATIONS.md  WINDOW_VISIBILITY_FIX_GUIDE.md  add-welcome-optimization.md  analyze_structure.cjs  analyze_structure.js  career_branch_management_plan.md  database_consolidation_plan.md  debug-branch-usage.js  debug-metadata.sql  (+24 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/sql/: OwnerUnits.sql
src-tauri/src/: auth.rs  backup_manager.rs  content_database.rs  database.rs  database_backup.rs  database_export.rs  database_logger.rs  file_manager.rs  hybrid_avatar.rs  hybrid_backup.rs  hybrid_high_rank_avatar.rs  logger.rs  main.rs  migration_helper.rs  migrations.rs  seed_104_temp.rs  test_helpers.rs  universal_sqlite_backup.rs
src-tauri/src/commands/: avatars.rs  backup.rs  branches.rs  content.rs  documents.rs  export.rs  mod.rs  officers.rs  questions.rs  references.rs  scoring.rs  (+5 more)
(+492 files in other folders)
