[package]
name = "pqs-rtn-hybrid-storage"
version = "0.1.0"
description = "PQS RTN Desktop Application with Hybrid Storage System"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.6", features = [] }

[dependencies]
tauri = { version = "1.8.3", features = [ "window-set-always-on-top", "window-set-focus", "window-set-cursor-icon", "window-set-cursor-grab", "window-set-cursor-position", "window-set-ignore-cursor-events", "window-set-skip-taskbar", "window-set-position", "window-set-min-size", "window-set-fullscreen", "window-set-icon", "window-set-resizable", "window-print", "window-set-size", "window-set-decorations", "window-set-cursor-visible", "window-set-max-size", "window-maximize", "window-show", "window-unmaximize", "window-start-dragging", "window-close", "window-minimize", "window-unminimize", "window-hide", "fs-exists", "fs-read-file", "shell-open", "dialog-ask", "dialog-save", "fs-remove-file", "fs-copy-file", "dialog-message", "fs-create-dir", "fs-write-file", "dialog-confirm", "fs-rename-file", "fs-remove-dir", "path-all", "fs-read-dir", "dialog-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
lazy_static = "1.4"
csv = "1.3"
base64 = "0.22"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
